--- a/.github/workflows/filtters.yml
+++ b/.github/workflows/filtters.yml
@@ -1,6 +1,8 @@
 name: Print Events
 on:
-  push: 
+  pull_request: 
+    types: 
+      - opened 
     branches:
       - main
       - 'dev-*' #dev-add...
